--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -2,9 +2,26 @@
 {% block title %}Каталог{% endblock %}
 {% block content %}
 <h1>Каталог</h1>
-<p>Товары без цен:</p>
-<ul>
-    <li>Товар 1: Описание</li>
-    <li>Товар 2: Описание</li>
-</ul>
+<div class="row">
+    <div class="col-md-4">
+        <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Товар 1">
+            <div class="card-body">
+                <h5 class="card-title">Товар 1</h5>
+                <p class="card-text">Описание товара 1.</p>
+                <a href="#" class="btn btn-primary">Купить</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <img src="https://via.placeholder.com/150" class="card-img-top" alt="Товар 2">
+            <div class="card-body">
+                <h5 class="card-title">Товар 2</h5>
+                <p class="card-text">Описание товара 2.</p>
+                <a href="#" class="btn btn-primary">Купить</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
