--- a/templates/base.html
+++ b/templates/base.html
@@ -8,19 +8,19 @@
     <title>{% block title %}Page{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">В меню</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/main">Главная</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/catalog">Каталог</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/category">Категория</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contacts">Контакты</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">В меню</a> <!-- Изменено на / -->
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/">Главная</a></li> <!-- Изменено на / -->
+                <li class="nav-item"><a class="nav-link" href="/catalog">Каталог</a></li>
+                <li class="nav-item"><a class="nav-link" href="/category">Категория</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contacts">Контакты</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
     <div class="container">
         {% block content %}{% endblock %}
     </div>
